Fixed menu issues on mobile

--- a/src/scss/components/navigation.scss
+++ b/src/scss/components/navigation.scss
@@ -15,10 +15,9 @@
   background-color: white;
   height: 75px;
   width: 100%;
-  z-index: 20;
 
   .nav-bar {
-    padding-left: $ui-spacing-half;
+    padding-left: 0;
     float: right;
     position: relative;
   }
